--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
       <th colspan="6" scope="col"><img src="image/b533f45bcf3d981867c1e4f136b080a5.png" width="1280" height="869" alt=""/></th>
     </tr>
     <tr>
-      <th width="197" bgcolor="#FFFFFF" style="text-align: center; color: rgba(7,252,233,1);" scope="row"> <a href="https://gyb-cloud.github.io/gyb--/%E4%B8%9C11%E8%88%8D327%E5%AF%9D%E5%AE%A4%E4%B8%BB%E9%A1%B5.html">返回宿舍页面</a></th>
+      <th width="197" bgcolor="#FFFFFF" style="text-align: center; color: rgba(7,252,233,1);" scope="row"> <a href="https://gyb-cloud.github.io/gyb--/东11舍327寝室主页.html">返回宿舍页面</a></th>
       <th width="190" bgcolor="#FFFFFF" style="text-align: center; color: rgba(11,36,252,1);" scope="row"><a href="index.html">首页</a></th>
       <th width="221" bgcolor="#FFFFFF" style="color: rgba(0,243,255,1)" scope="row"><a href="myweb/22.html">人生经历</a></th>
       <th width="218" bgcolor="#FFFFFF" style="color: rgba(0,243,255,1)" scope="row"><a href="myweb/33.html">重要比赛</a></th>
